--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -9,7 +9,7 @@
         {% endunless %}
         <a class="site-title" href="{{ '/' | relative_url }}">
           {{ site.masthead_title | default: site.title }}
-          {% if site.title_addon %}<span class="site-title-addon">{{ site.title_addon }}</span>{% endif %}
+          {% if site.title_addon %}<span class="site-title-addon" style="  display: block; font-size: 0.725em;">{{ site.title_addon }}</span>{% endif %}
           {% if site.subtitle %}<span class="site-subtitle">{{ site.subtitle }}</span>{% endif %}
         </a>
         <ul class="visible-links">
